--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "automock": false
   },
   "devDependencies": {
+    "@types/graphql-relay": "^0.4.0",
     "@types/jest": "^16.0.1",
     "coveralls": "^2.11.15",
+    "graphql-relay": "^0.4.4",
     "jest": "^17.0.3",
     "tslint": "^4.0.2",
     "typescript": "^2.1.4"
